--- a/smart_classroom_algo/modules/tensorRT/CMakeLists.txt
+++ b/smart_classroom_algo/modules/tensorRT/CMakeLists.txt
@@ -9,17 +9,17 @@ set(CMAKE_CXX_STANDARD 14)
 find_package(CUDA REQUIRED)
 
 # 因为protobuf，需要用特定版本，所以这里指定路径
-set(PROTOBUF_DIR "../../lean/protobuf")
+set(Protobuf_DIR $ENV{PROTOBUF_HOME})
 set(CUDNN_DIR "../../lean/cudnn")
 set(CUDA_DIR "../../lean/cuda")
 set(TENSORRT_DIR "../../lean/TensorRT")
+find_package(Protobuf REQUIRED CONFIG)
 find_package(OpenCV REQUIRED)
 #cuda
 include_directories(${CUDA_DIR}/include)
 link_directories(${CUDA_DIR}/lib)
 #protobuf
-include_directories(${PROTOBUF_DIR}/include)
-link_directories(${PROTOBUF_DIR}/lib)
+include_directories(${Protobuf_INCLUDE_DIR})
 #tensorrt
 include_directories(${TENSORRT_DIR}/include)
 link_directories(${TENSORRT_DIR}/lib)
@@ -54,5 +54,5 @@ cuda_add_library(${PROJECT_NAME} SHARED ${srcs})
 
 target_link_libraries(${PROJECT_NAME} nvinfer nvinfer_plugin) # link tensorrt
 target_link_libraries(${PROJECT_NAME} cuda cublas cudart cudnn) # link cuda
-target_link_libraries(${PROJECT_NAME} libprotobuf libprotobufd) # link protobuf
+target_link_libraries(${PROJECT_NAME} ${Protobuf_LIBRARIES}) # link protobuf
 target_link_libraries(${PROJECT_NAME} ${OpenCV_LIBS}) # link opencv
